# opinionated-mixins

./: .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOURNAL.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  field_proposal.md  model_proposal.md
.github/workflows/: test.yml
src/opinionated_mixins/contrib/beanie/: person.py
src/opinionated_mixins/contrib/dataclasses/: person.py
src/opinionated_mixins/contrib/mongoengine/: __init__.py  person.py
src/opinionated_mixins/contrib/odmantic/: person.py
src/opinionated_mixins/contrib/pydantic/: person.py
src/opinionated_mixins/contrib/sqlalchemy/: __init__.py  person.py
src/opinionated_mixins/contrib/sqlmodel/: person.py
src/opinionated_mixins/contrib/wtforms/: person.py
