[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opinionated-mixins"
dynamic = ["version"]
description = 'Opinionated set of mixins. Implemented in Pydantic, SQLAlchemy, MongoEngine, ODMantic, etc.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/hasansezertasan/opinionated-mixins#readme"
Issues = "https://github.com/hasansezertasan/opinionated-mixins/issues"
Source = "https://github.com/hasansezertasan/opinionated-mixins"

[tool.hatch.version]
path = "src/opinionated_mixins/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/opinionated_mixins tests}"

[tool.coverage.run]
source_pkgs = ["opinionated_mixins", "tests"]
branch = true
parallel = true
omit = [
  "src/opinionated_mixins/__about__.py",
]

[tool.coverage.paths]
opinionated_mixins = ["src/opinionated_mixins", "*/opinionated-mixins/src/opinionated_mixins"]
tests = ["tests", "*/opinionated-mixins/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
