[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opinionated-mixins"
dynamic = ["version"]
description = 'Opinionated set of mixins. Implemented in Pydantic, SQLAlchemy, MongoEngine, ODMantic, etc.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/hasansezertasan/opinionated-mixins#readme"
Issues = "https://github.com/hasansezertasan/opinionated-mixins/issues"
Source = "https://github.com/hasansezertasan/opinionated-mixins"

[tool.hatch.version]
path = "src/opinionated_mixins/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pre-commit >=2.20.0, <4.0.0",
  "pydantic",
  "sqlalchemy",
  "mongoengine",
  "odmantic",
  "beanie",
  "wtforms",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]
pre = "pre-commit run --all-files --hook-stage manual --show-diff-on-failure"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
  "ruff==0.2.0",
  "sqlalchemy-stubs>=0.4",
  "types-WTForms>=3.1",
]
[tool.hatch.envs.types.scripts]
typing = "mypy --install-types --non-interactive {args:src/opinionated_mixins}"
style = ["ruff {args:.}"]
format = ["ruff format {args:.}"]
all = ["typing", "style", "format"]

[tool.ruff]
# Run `ruff linter` command to see all available linters and their descriptions
target-version = "py38"
show-fixes = true
fix = true

[tool.ruff.lint]
ignore-init-module-imports = true
select = [
  "E4",
  "E7",
  "E9",
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "I",  # isort
  "B9",
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
]
ignore = [
  "E501", # line too long, handled by black
  "E402", # module level import not at top of file
  "W191", # indentation contains tabs
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["opinionated_mixins"]

[tool.mypy]
strict = true
pretty = true
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.coverage.run]
source_pkgs = ["opinionated_mixins", "tests"]
branch = true
parallel = true
omit = [
  "src/opinionated_mixins/__about__.py",
]

[tool.coverage.paths]
opinionated_mixins = ["src/opinionated_mixins", "*/opinionated-mixins/src/opinionated_mixins"]
tests = ["tests", "*/opinionated-mixins/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
